default-configs/gateways/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asm-gateways
  labels:
    #istio.io/rev: asm-managed
    istio-injection: enabled
