default-configs/gateways/store-default-httproute-redirect.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store-http-to-https-redirect-httproute
  namespace: asm-gateways
spec:
  parentRefs:
  - name: store-external-http
    namespace: asm-gateways
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
