default-configs/gateways/store-default-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: store-default-httproute
  namespace: asm-gateways
spec:
  parentRefs:
  - name: store-external-http
    namespace: asm-gateways
    sectionName: https
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: asm-ingress-gateway-xlb
      port: 443
